--- a/Acerca-de.html
+++ b/Acerca-de.html
@@ -57,9 +57,9 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-530e"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2022 - karilyntalavera.com<br>@sexologak<br>Todos los derechos reservados.
+        <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2022 - karilyntalavera.com<br>Todos los derechos reservados.
         </p>
       </div></footer>
-
+ 
   
 </body></html>
