Cambio nombre de pagina principal

--- a/Terapia-Individual-y-de-Pareja.html
+++ b/Terapia-Individual-y-de-Pareja.html
@@ -40,7 +40,7 @@ Docente ., ​Cuéntanos tu inquietud.">
     <meta name="theme-color" content="#9b74ec">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Terapia-Individual-y-de-Pareja.html" data-home-page-title="Terapia Individual y de Pareja" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-gradient u-header u-header" id="sec-f943"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-gradient u-header u-header" id="sec-f943"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse">
             <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
