--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@ Docente ., ​Cuéntanos tu inquietud.">
     <meta name="theme-color" content="#9b74ec">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Terapia-Individual-y-de-Pareja.html" data-home-page-title="Terapia Individual y de Pareja" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-gradient u-header u-header" id="sec-f943"><div class="u-clearfix u-sheet u-sheet-1">
-        <nav class="u-align-left u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
-          <div class="menu-collapse">
-            <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
+  <body data-home-page="Terapia-Individual-y-de-Pareja.html" data-home-page-title="Terapia Individual y de Pareja" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-9fa5 u-header" id="sec-f943"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <nav class="u-align-left u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD">
+          <div class="menu-collapse" style="font-size: 1.25rem; font-weight: 700;">
+            <a class="u-button-style u-custom-active-color u-custom-hover-color u-custom-text-active-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-blur u-custom-text-shadow-color u-custom-text-shadow-transparency u-custom-text-shadow-x u-custom-text-shadow-y u-nav-link" href="#" style="font-size: calc(1em + 8px);">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5c50"></use></svg>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-5c50" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Terapia-Individual-y-de-Pareja.html" style="padding: 10px 20px;">Terapia Individual y de Pareja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Acerca-de.html" style="padding: 10px 20px;">Acerca de</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contacto.html" style="padding: 10px 20px;">Contacto</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-black u-nav-link u-text-hover-white" href="Terapia-Individual-y-de-Pareja.html" style="padding: 10px 20px;">Terapia Individual y de Pareja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-black u-nav-link u-text-hover-white" href="Acerca-de.html" style="padding: 10px 20px;">Sobre mí</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-black u-nav-link u-text-hover-white" href="Contacto.html" style="padding: 10px 20px;">Contáctanos</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -60,8 +60,8 @@ Docente ., ​Cuéntanos tu inquietud.">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Terapia-Individual-y-de-Pareja.html">Terapia Individual y de Pareja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de.html">Acerca de</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de.html">Sobre mí</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contáctanos</a>
 </li></ul>
               </div>
             </div>
@@ -101,7 +101,7 @@ mutuo y la fijación de límites claros no negociables.</h3>
     </section>
     <section class="u-clearfix u-custom-color-4 u-section-4" id="sec-ca16" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1"> ¡Observa algunas de las herramientas usadas en&nbsp;<br>la terapia de pareja!&nbsp;<br>
+        <h2 class="u-align-center u-text u-text-default u-text-1"> ¡Observa algunas de las herramientas usadas en&nbsp;<br>la terapia individual y de pareja!&nbsp;<br>
         </h2>
       </div>
     </section>
@@ -280,7 +280,7 @@ negociables de manera conscientes.</h5>
                   <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"> Cuéntanos tu inquietud.</h2>
                 </div>
               </div>
-              <div class="u-align-center u-container-align-center u-container-style u-custom-color-5 u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
+              <div class="u-align-center u-container-style u-custom-color-5 u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
                 <div class="u-container-layout u-container-layout-3"><span class="infinite u-align-center u-file-icon u-icon u-icon-1" data-href="https://wa.link/yxlj9s" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction="" data-animation-delay="0"><img src="images/1384055.png" alt=""></span>
                 </div>
               </div>
@@ -295,6 +295,6 @@ negociables de manera conscientes.</h5>
         <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2022 - karilyntalavera.com<br>Todos los derechos reservados.
         </p>
       </div></footer>
-
+ 
   
 </body></html>
