--- a/Contacto.html
+++ b/Contacto.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="es"><head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KTVRV89');</script>
+  <!-- End Google Tag Manager -->
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="contacto, Siguenos">
@@ -67,10 +77,9 @@
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-2">
-                  <h4 class="u-custom-font u-font-montserrat u-text u-text-default u-text-2"></h4>
-                  <p class="u-custom-font u-font-montserrat u-text u-text-3">&nbsp;&nbsp;</p><span class="u-file-icon u-icon u-text-palette-1-base u-icon-1"><img src="/1caf7b1d3d5f4e/ce131fa2-9b26-4c33-a9f7-aff3357242a7-bee51007.png" alt=""></span>
-                  <h6 class="u-align-center u-custom-font u-font-montserrat u-text u-text-4">Linea de Atencion directa.</h6>
-                  <p class="u-align-center u-custom-font u-font-montserrat u-text u-text-5">+ 57 313 2518966</p><span class="infinite u-align-center u-file-icon u-icon u-icon-2" data-href="https://wa.link/j79tjn" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction=""><img src="images/5968841.png" alt=""></span>
+                  <h4 class="u-custom-font u-font-montserrat u-text u-text-default u-text-2"></h4><span class="u-file-icon u-icon u-text-palette-1-base u-icon-1"><img src="/1caf7b1d3d5f4e/ce131fa2-9b26-4c33-a9f7-aff3357242a7-bee51007.png" alt=""></span>
+                  <h6 class="u-align-center u-custom-font u-font-montserrat u-text u-text-3">Linea de Atencion directa.</h6>
+                  <p class="u-align-center u-custom-font u-font-montserrat u-text u-text-4">+ 57 313 2518966</p><span class="infinite u-align-center u-file-icon u-icon u-icon-2" data-href="https://wa.link/j79tjn" data-target="_blank" data-animation-name="pulse" data-animation-duration="750" data-animation-direction=""><img src="images/5968841.png" alt=""></span>
                 </div>
               </div>
             </div>
@@ -118,6 +127,12 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2022 - karilyntalavera.com<br>Todos los derechos reservados.
         </p>
       </div></footer>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTVRV89"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
 
   
 </body></html>
