Modificada Kwords_actualizacion13abril
Se actualizo la pagina las kwords de usa.

--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -53,17 +53,17 @@ Docente ., ​Cuéntanos tu inquietud.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Boton Flotante - WhatsApp</title>
-  <link rel="stylesheet" href="nicepage.css">
-  <!--Icon-Font-->
-  <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<title>Boton Flotante - WhatsApp</title>
+<link rel="stylesheet" href="nicepage.css">
+<!--Icon-Font-->
+<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+
 
 
 </head>
-  <body data-home-page="Terapia-de-pareja-near-me.html" data-home-page-title="Terapia de pareja near me" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-9fa5 u-header" id="sec-f943"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-9fa5 u-header" id="sec-f943"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1.25rem; font-weight: 700;">
             <a class="u-button-style u-custom-active-color u-custom-hover-color u-custom-text-active-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-blur u-custom-text-shadow-color u-custom-text-shadow-transparency u-custom-text-shadow-x u-custom-text-shadow-y u-nav-link" href="#" style="font-size: calc(1em + 8px);">
@@ -412,13 +412,14 @@ y terapia para parejas impartida por una sexóloga como yo, ayuda a abordar tema
         </p>
       </div></footer>
 
-        <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTVRV89"
-          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-          <!-- End Google Tag Manager (noscript) -->
+      <a href=" https://wa.link/yxlj9s " class="btn-wsp" target="_blank">
+        <i class="fa fa-whatsapp icono"></i>
+    </a>
+  
 
-          <a href=" https://wa.link/yxlj9s " class="btn-wsp" target="_blank">
-            <i class="fa fa-whatsapp icono"></i>
-        </a>
+      <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTVRV89"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 
 </body></html>
