--- a/Acerca-de.html
+++ b/Acerca-de.html
@@ -120,7 +120,7 @@ días...<br>
         <p class="u-small-text u-text u-text-variant u-text-1"> Copyright © 2022 - karilyntalavera.com<br>Todos los derechos reservados.
         </p>
       </div></footer>
-    <section class="u-align-center u-clearfix u-cookies-consent u-grey-70 u-cookies-consent" id="sec-d75b">
+<section class="u-align-center u-clearfix u-cookies-consent u-grey-70 u-cookies-consent" id="sec-d75b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
@@ -146,12 +146,12 @@ días...<br>
 }
 
 .u-cookies-consent .u-sheet-1 {
-  min-height: 287px;
+  min-height: 217px;
 }
 
 .u-cookies-consent .u-layout-wrap-1 {
-  margin-top: 65px;
-  margin-bottom: 65px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .u-cookies-consent .u-layout-cell-1 {
@@ -255,15 +255,33 @@ días...<br>
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 217px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 222px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px 12px;
+  }
+
+  .u-cookies-consent .u-btn-1 {
+    margin-left: 0;
   }
 }</style></section>
   
