--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@ dirección correcta, ¡estoy aquí para ayudarte!<br>
 }
 
 .u-cookies-consent .u-sheet-1 {
-  min-height: 287px;
+  min-height: 217px;
 }
 
 .u-cookies-consent .u-layout-wrap-1 {
-  margin-top: 65px;
-  margin-bottom: 65px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .u-cookies-consent .u-layout-cell-1 {
@@ -507,15 +507,33 @@ dirección correcta, ¡estoy aquí para ayudarte!<br>
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 217px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 222px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px 12px;
+  }
+
+  .u-cookies-consent .u-btn-1 {
+    margin-left: 0;
   }
 }</style></section>
   
