--- a/Contacto.html
+++ b/Contacto.html
@@ -155,6 +155,7 @@ contáctame para obtener más información sobre cómo puedo ayudarte.​&nbsp;
       </div>
     <style> .u-cookies-consent {
   background-image: none;
+  opacity: 0.8;
 }
 
 .u-cookies-consent .u-sheet-1 {
