--- a/Acerca-de.html
+++ b/Acerca-de.html
@@ -143,6 +143,7 @@ días...<br>
       </div>
     <style> .u-cookies-consent {
   background-image: none;
+  opacity: 0.8;
 }
 
 .u-cookies-consent .u-sheet-1 {
