--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@ dirección correcta, ¡estoy aquí para ayudarte!<br>
       </div>
     <style> .u-cookies-consent {
   background-image: none;
+  opacity: 0.8;
 }
 
 .u-cookies-consent .u-sheet-1 {
