--- a/Terapia-de-pareja-near-me.html
+++ b/Terapia-de-pareja-near-me.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="es"><head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KTVRV89');</script>
+  <!-- End Google Tag Manager -->
+  
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Terapia de pareja con&nbsp;Msc. Karilyn Talavera@SexologaK, ​&nbsp; &nbsp; ¡Impacta tu relación positivamente fijando límites claros de manera consciente!, ​¡Observa algunas de las herramientas usadas en&nbsp;la terapia de pareja!, ​Potenciamos tu relación con herramientas tan sutiles pero tan conscientes
@@ -543,4 +554,11 @@ dirección correcta, ¡estoy aquí para ayudarte!<br>
 <i class="fa fa-whatsapp my-float"></i>
 </a>
   
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTVRV89"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
+
 </body></html>
